hash is now stored on disk
polished the web app a tiny bit
0.5 version published

--- a/AzureExtension.FullMinify/Views/Home/About.cshtml
+++ b/AzureExtension.FullMinify/Views/Home/About.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<h2>About AzureExtension.FullMinify</h2>
+<div>
+    <span>This site extension minifies html, css, js and images (jpg, gif, pmg).</span><br/>
+    <span>On startup of the webapp, the default directory (D:\home\site\wwwroot\) is scanned for compressable files. The files are then compressed and replaced. If a file is modified or added, they will be reprocessed immediately.</span><br />
+    <span>This project was greatly inspired by the existing site extension Azure Image Optimizer by Sayed-Ibrahim-Hashimi and Mads Kristensen.</span>
+</div>
+<div>
+    <a href="https://github.com/MaxMelcher/AzureExtension.FullMinify">Read more on github</a>
+</div>
