--- a/AzureExtension.FullMinify/Views/Home/Debug.cshtml
+++ b/AzureExtension.FullMinify/Views/Home/Debug.cshtml
@@ -1,8 +1,9 @@
 ﻿@model System.Collections.Generic.List<string>
 
 
-<h2>Log</h2>
+<h2>Debug</h2>
 
+This view starts a full crawl - potential errors during startup of the crawls are listed below:
 
 <table class="table table-bordered table-hover">
 
